deploy/httproute/loki/loki-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: loki
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy
      sectionName: http
  hostnames:
    - "loki.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki-gateway
          port: 80
          namespace: loki
